[gd_scene load_steps=3 format=3 uid="uid://beref4op1yrhy"]

[ext_resource type="Script" path="res://scenes/session/ui/fileItem.gd" id="1_smmt0"]
[ext_resource type="Texture2D" uid="uid://cs3fjjiritnke" path="res://media/icons/delete.svg" id="2_0b0ic"]

[node name="fileItem" type="VBoxContainer"]
visibility_layer = 1024
custom_minimum_size = Vector2(100, 140)
offset_right = 100.0
offset_bottom = 140.0
mouse_default_cursor_shape = 2
script = ExtResource("1_smmt0")

[node name="Panel" type="Panel" parent="."]
light_mask = 1024
visibility_layer = 1024
clip_contents = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_filter = 1

[node name="filePreview" type="TextureRect" parent="Panel"]
unique_name_in_owner = true
visibility_layer = 1024
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="deleteButton" type="Button" parent="Panel"]
unique_name_in_owner = true
visible = false
visibility_layer = 1025
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -39.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 39.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
tooltip_text = "Show session files"
mouse_filter = 1
mouse_default_cursor_shape = 2
icon = ExtResource("2_0b0ic")

[node name="MarginContainer" type="MarginContainer" parent="."]
visibility_layer = 1024
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_right = 3

[node name="fileLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
visibility_layer = 1024
layout_mode = 2
text = "Filenamdfdfe.png"
clip_text = true
text_overrun_behavior = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="Panel/deleteButton" to="." method="_on_deleteButton_pressed"]
